# dmgen

./: .travis.yml  CMakeLists.txt  README.md  build.sh
ctemplate/src/windows/ctemplate/: template_cache.h
include/: dmos.h  dmutil.h  pugixml.hpp
src/: buildtpl.sh  dmbin2array.cpp  dmbin2array.h  dmcmake_package_bin.h  dmerror_package_bin.h  dmgen.cpp  dmgen.h  dmpackage  main.cpp  strtk.hpp
src/tpl/: CMakeLists.txt
src/tpl/include/: dmcore.h  dmformat-inl.h  dmformat.h  dmostream.h  dmposix.h  dmprintf.h  dmranges.h  dmthread.h  dmtime.h  dmutil.h
src/tpl/src/: main.cpp
